--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "@prisma/extension-accelerate": "^1.1.0",
+    "@sonivivek346/common-medium365": "^1.0.0",
     "hono": "^4.4.0",
     "prisma": "^5.14.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240403.0",
     "wrangler": "^3.47.0"
-  }
+  },
+  "name": "",
+  "version": ""
 }
